--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 .vs/plusminus/v16/Browse.VC.db-wal
 .vs/plusminus/v16/Browse.VC.opendb
 .vs/plusminus/v16/ipch/AutoPCH/d3ca709e3b6c22f8/MAIN.ipch
+.vs/plusminus/v16/.suo
