--- a/plusminus/plusminus.vcxproj.filters
+++ b/plusminus/plusminus.vcxproj.filters
@@ -172,6 +172,9 @@
     <ClInclude Include="stuff/structs.h">
       <Filter>source\stuff</Filter>
     </ClInclude>
+    <ClInclude Include="logsystem.h">
+      <Filter>source\stuff</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
