--- a/plusminus/plusminus.vcxproj
+++ b/plusminus/plusminus.vcxproj
@@ -7,6 +7,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="crc32.hpp" />
     <ClInclude Include="hooks/defs.h" />
     <ClInclude Include="logsystem.h" />
     <ClInclude Include="stuff/offsets.h" />
