--- a/plusminus/plusminus.vcxproj.filters
+++ b/plusminus/plusminus.vcxproj.filters
@@ -175,6 +175,9 @@
     <ClInclude Include="logsystem.h">
       <Filter>source\stuff</Filter>
     </ClInclude>
+    <ClInclude Include="crc32.hpp">
+      <Filter>source\stuff</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
