--- a/plusminus/plusminus.vcxproj
+++ b/plusminus/plusminus.vcxproj
@@ -8,6 +8,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="crc32.hpp" />
+    <ClInclude Include="framework.h" />
     <ClInclude Include="hooks/defs.h" />
     <ClInclude Include="logsystem.h" />
     <ClInclude Include="rust.h" />
