--- a/plusminus/plusminus.vcxproj.filters
+++ b/plusminus/plusminus.vcxproj.filters
@@ -29,11 +29,11 @@
     <Filter Include="source\hooks\minhook\HDE">
       <UniqueIdentifier>{ccd40a52-559f-4372-8ac9-b4f6ffd5b701}</UniqueIdentifier>
     </Filter>
-    <Filter Include="source\init">
-      <UniqueIdentifier>{03a8b386-acf1-4ca9-82c5-2098da2d41c6}</UniqueIdentifier>
-    </Filter>
     <Filter Include="source\stuff\sdk">
       <UniqueIdentifier>{9345b5da-4641-4db4-80a2-18474cef01bc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="source\init">
+      <UniqueIdentifier>{03a8b386-acf1-4ca9-82c5-2098da2d41c6}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -174,6 +174,9 @@
     </ClInclude>
     <ClInclude Include="config/config.h">
       <Filter>source\main</Filter>
+    </ClInclude>
+    <ClInclude Include="wrapper.h">
+      <Filter>source\stuff\sdk</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
