--- a/plusminus/plusminus.vcxproj.filters
+++ b/plusminus/plusminus.vcxproj.filters
@@ -70,9 +70,6 @@
     <ClInclude Include="hooks/minhook\src\trampoline.h">
       <Filter>source\hooks\minhook\HDE</Filter>
     </ClInclude>
-    <ClInclude Include="hooks/hooks.hpp">
-      <Filter>source\hooks</Filter>
-    </ClInclude>
     <ClInclude Include="menu/imgui/imconfig.h">
       <Filter>source\menu\imgui</Filter>
     </ClInclude>
@@ -177,6 +174,9 @@
     </ClInclude>
     <ClInclude Include="gamethread.h">
       <Filter>source\main\ent</Filter>
+    </ClInclude>
+    <ClInclude Include="hooks\hooks.h">
+      <Filter>source\hooks</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
