--- a/plusminus/plusminus.vcxproj.filters
+++ b/plusminus/plusminus.vcxproj.filters
@@ -103,9 +103,6 @@
     <ClInclude Include="main/lol.h">
       <Filter>source\main</Filter>
     </ClInclude>
-    <ClInclude Include="main/targeting.h">
-      <Filter>source\main</Filter>
-    </ClInclude>
     <ClInclude Include="menu/menu.h">
       <Filter>source\menu</Filter>
     </ClInclude>
@@ -177,6 +174,9 @@
     </ClInclude>
     <ClInclude Include="stuff\xorstr.h">
       <Filter>source\stuff</Filter>
+    </ClInclude>
+    <ClInclude Include="main\f_object.h">
+      <Filter>source\main</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
